Prevent search loading icon from being cut off

--- a/sass/site/header/_search.scss
+++ b/sass/site/header/_search.scss
@@ -58,6 +58,7 @@
 			svg {
 				fill: $color__text-light;
 				height: 31px;
+				padding: 3px;
 				width: 32px;
 
 				@media (max-width: 768px) {
@@ -72,8 +73,8 @@
 					display: none;
 
 					path {
-						@include animation( spin 2s linear infinite );
-						@include transform-origin( 50% 50% );
+						@include animation(spin 2s linear infinite);
+						@include transform-origin(50% 50%);
 					}
 				}
 			}
@@ -81,11 +82,11 @@
 	}
 }
 
-@include keyframes( spin ) {
+@include keyframes(spin) {
 	from {
-		@include transform( rotate( 0deg ) );
+		@include transform( rotate(0deg) );
 	}
 	to {
-		@include transform( rotate( 360deg ) );
+		@include transform( rotate(360deg) );
 	}
 }
